                CHANGES IN TraMineRextras VERSION 0.7.1 [2020-12-05] (Development version)

New functions:
    o   seqindic.dyn() dynamic individual indicator values.
    o   plot.dynin() plot method for dynin objects produced
        by seqindic.dyn.

Changes in existing functions:
    o   seqplot.tentrop() default color now set using
        qualitative_hcl from colorspace with the 'Dark 3' palette.


                CHANGES IN TraMineRextras VERSION 0.6.0 [2020-04-08]

New functions
    o   seqCompare() BIC and Likelihood ratio test (LRT) for comparing
        two sets of sequences.
    o   seqLRT() LRT for comparing two sets of sequences.
    o   seqBIC() BIC for comparing sequence data.

Changes in existing functions
    o   seqgranularity(): two new methods "first.valid" and
        "last.valid" for sequences with missing values.
    o   seqplot-rf() gains a new argument 'which.plot'.

Bug fixes
    o   seqgranularity() did not return a proper stslist object
        when \code{method="mostfreq"}.


                CHANGES IN TraMineRextras VERSION 0.4.7 [2020-03-02]

Bug fixes
    o   seqedplot(): Issue with color selection when only one event.
    o   seqedplot(): Now calls plot.survfit with by default
        conf.int=FALSE instead of "none" (advised by Terry Therneau).

Misc.
    o   seqprecarity(), seqprecorr(), seqprecstart() deleted. These
        functions are in TraMineR since v 2.0-13.


                CHANGES IN TraMineRextras VERSION 0.4.6 [2019-05-06]

Changes in existing functions
    o   seqedplot(): argument 'title' is deprecated, use 'main' instead.
    o   seqedplot(): when type = 'survival', now supports the 'conf.int'
        argument of plot.survfit to control the display of confidence
        intervals.

Bug fixes
    o   seqedplot(): An issue with the joint use of the 'xmax' and
        'xlim' arguments when calling plot.survfit raised a warning
        since Survival v3.0.

