@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.7.1
-Date: 2020-12-07
+Date: 2020-12-25
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
@@ -9,10 +9,11 @@ Authors@R: c(
   person("Reto", "Buergin", role = "aut"),
   person("Alexis", "Gabadinho", role = "ctb"),
   person("Pierre-Alexandre", "Fonta", role = "ctb"),
+  person("Tim", "Liao", role = "ctb"),
   person("Nicolas", "Muller", role = "ctb"),
   person("Patrick", "Rousset", role = "ctb"))
-Depends: R (>= 3.0.0), TraMineR (>= 2.2-1)
-Imports: grDevices, graphics, gtools, stats, cluster, RColorBrewer, colorspace, survival
+Depends: R (>= 3.5.0), TraMineR (>= 2.2-1)
+Imports: grDevices, graphics, gtools, stats, cluster, RColorBrewer, colorspace, survival, doParallel, foreach
 Description: Collection of ancillary functions and utilities to be used in conjunction with the 'TraMineR' package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of 'TraMineR'.
 License: GPL (>= 2)
 URL: http://traminer.unige.ch/
