@@ -1,14 +1,17 @@
 import(TraMineR)
-importFrom("utils", "packageDescription", "packageVersion")
+importFrom("utils", "packageDescription", "packageVersion", "combn")
 importFrom("graphics", "abline", "axis", "box", "layout", "legend", "lines", "polygon", "par", "plot", "points", "rect", "segments", "text", "title", "boxplot","strheight", "strwidth")
 importFrom("grDevices", "col2rgb", "hsv", "rgb", "rgb2hsv")
-importFrom("stats", "chisq.test", "pchisq", "cutree", "glm", "princomp", "reshape", "runif", "xtabs", "as.dist", "binomial", "cmdscale", "hclust","pnorm", "qnorm", "sd", "weighted.mean")
+importFrom("stats", "chisq.test", "pchisq", "cutree", "glm", "princomp", "reshape", "runif", "xtabs", "as.dist", "binomial", "cmdscale", "hclust","pnorm", "qnorm", "sd", "weighted.mean", "pt")
 importFrom("cluster", "daisy", "pam", "agnes")
 ##importFrom("combinat", "permn")
 importFrom("RColorBrewer","brewer.pal")
 importFrom("colorspace", "qualitative_hcl")
 importFrom("survival","survfit", "coxph", "Surv")
 importFrom("gtools","permute")
+importFrom("doParallel","registerDoParallel")
+importFrom("parallel","makeCluster","stopCluster")
+importFrom("foreach","foreach","%dopar%")
 
 export(
     group.p,
@@ -44,7 +47,8 @@ export(
     seqCompare,
     seqBIC,
     seqLRT,
-    seqindic.dyn
+    seqindic.dyn,
+    linkedseqs
 )
 
 ## emlt methods
